# igl_utils

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/: module.cc  tetobj.cc  tetobj.h
python/: tetobj.py
src/: iglremesh.cc  main.cc  obj2m.cc  objaddvn.cc  objcenter.cc  objpca.cc  objpca_align.cc  objsa.cc  objscale.cc  objtl.cc  ply2obj.cc  plycenter.cc  tet2m.cc
